== Planned

* Enhancements
  * Copy existing entry as template for a new one
  * Make Purchases with Cash Withdrawals easier
  * Automatically create a "Transfer" ChargeType when creating a new account.
  * Select Entries to put together as a PDF Report
  * Easier to make new Entry from menu drop down
  * Add Recurring Templates

* Test Coverage
  * Accounts test suite
  * Charge Types Controller test suite
  * Entries Controller test suite
  * Users test suite

== 1.2.0

* Enhancements
  * Update Rails to 3.1.0.rc6

== 1.1.0

* Enhancements
  * Update Rails to 3.1.0.rc4
  * Replace Prototype with jQuery
  * Replace WillPaginate with Kaminari
  * Update Devise to 1.3.4
  * Replace CalendarDateSelect with jQuery DatePicker
  * Sort Entry Autocomplete by most commonly used

* Test Coverage
  * Fixtures updated
  * Test base cleaned up

== 1.0.0

* Accounts can be created
* Charge types can be added to accounts
* Entries can be input from calendar view and associated with charge types
* Overall graph allows view of yearly and month by month spending
* Statistics for average expenditures, charged balance, and account balance displayed on dashboard