@@ -8,7 +8,7 @@
   * Easier to make new Entry from menu drop down
   * Add Recurring Templates
 
-* Test Coverage
+* Testing
   * Accounts test suite
   * Charge Types Controller test suite
   * Entries Controller test suite
@@ -18,6 +18,9 @@
 
 * Enhancements
   * Update Rails to 3.1.0.rc6
+
+* Testing
+  * Add Navigation integration tests for friendly forwarding and redirection to login page
 
 == 1.1.0
 
@@ -29,7 +32,7 @@
   * Replace CalendarDateSelect with jQuery DatePicker
   * Sort Entry Autocomplete by most commonly used
 
-* Test Coverage
+* Testing
   * Fixtures updated
   * Test base cleaned up
 
